tests/compile_failure/src/Core/Integer.unsigned_unary_minus.fail.cpp
#include <Phi/Core/Integer.hpp>

int main()
{
    phi::Integer<unsigned> i{7u};

    auto val = -i;
}
